--- a/views/layouts/beverage.handlebars
+++ b/views/layouts/beverage.handlebars
@@ -1,6 +1,6 @@
-<div>
-<hr>
-<h2>{{Beverage.name}}</h2> 
+<div class = "boxed">
+
+<h2>Beverage: {{Beverage.name}}</h2> 
 <dl>
     <dt class="bevLabel">Type</dt>
     <dd class="bevDesc">{{Beverage.type}}</dd>
@@ -16,7 +16,7 @@
 {{!-- <p>{{Beverage.ratingCount}}</p> --}}
 </div>
 
-<div>
+<div class = "boxed2">
     <h2>Posts about {{Beverage.name}}</h2>
     
     {{#if Posts}}
