post page commenting changed

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -33,7 +33,7 @@
 			{{/if}}
 			{{#if USERNAME}}
  			<td><a href = "/logout">Log Out</a></td>
- 		  <td><p>Username: {{USERNAME}}</p></td>
+ 		  <td><p id = "nav_userName">Username: {{USERNAME}}</p></td>
  		  {{/if}}
  				</tr>
  		    </table>
