--- a/views/layouts/login_signup.handlebars
+++ b/views/layouts/login_signup.handlebars
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="/public/css/site.css">
    
 </head>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tota11y/0.1.6/tota11y.min.js"></script>
 
 <body>
     <h1>RateMyDrinks</h1>
