--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,7 @@
 	    <title>RateMyDrinks</title>
 	    <link rel="stylesheet" href="/public/css/site.css">
 	</head>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/tota11y/0.1.6/tota11y.min.js"></script>
 	<body>
 		<h1>RateMyDrinks</h1>
 		<nav class="navBar">
